<resources>
    <string name="app_name">Drawer Layout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_products">All Products</string>
    <string name="drawer_subtitle">Account</string>
    <string name="login">Login</string>
    <string name="logout">LogOut</string>
    <string name="content_description_media">Item city</string>
    <string name="action_Item">see more</string>
    <string name="favorite">favorite</string>
    <string name="content_description_favorite">favorite description</string>
    <string name="content_description_search">search dscription</string>
    <string name="search">search</string>
    <string name="shopping_cart">shopping cart</string>
    <string name="content_description_cart">shopping cart description</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_Item_pay">Buy</string>
    <string name="img_user">image user</string>
    <string name="content_description_delete">Delete</string>
    <string name="shopping_delete">Delete</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">Register</string>
    <string name="prompt_name">Last name</string>
    <string name="image_item">image search</string>
    <string name="prompt_comments">Comment...</string>
    <string name="comment_delete">delete</string>
    <string name="comment_edit">Edit</string>
</resources>