<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_shopping"
            android:title="@string/menu_products" />
    </group>
    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/subtitle"
            android:title="@string/drawer_subtitle">
            <menu>
                <item
                    android:id="@+id/nav_login"
                    android:icon="@drawable/ic_login"
                    android:title="@string/login"
                    android:visible="true"/>

                <item
                    android:id="@+id/nav_register"
                    android:icon="@drawable/ic_register"
                    android:title="@string/register"
                    android:visible="true"/>
            </menu>
        </item>
    </group>
</menu>