<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.register.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/defaultDp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtIlName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="MissingConstraints"
                    android:hint="@string/prompt_name"
                    app:endIconMode="clear_text"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtEditName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtIlEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/defaultDp"
                    tools:ignore="MissingConstraints"
                    android:hint="@string/prompt_email"
                    app:endIconMode="clear_text"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:layout_constraintTop_toBottomOf="@id/txtIlName">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtEditEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtIlPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/defaultDp"
                    tools:ignore="MissingConstraints"
                    android:hint="@string/prompt_password"
                    app:endIconMode="password_toggle"
                    app:layout_constraintTop_toBottomOf="@id/txtIlEmail"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtEditPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/titleImageSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/defaultDp"
                    android:text="Search Image"
                    app:layout_constraintTop_toBottomOf="@id/txtIlPassword"
                    app:layout_constraintStart_toStartOf="@id/imgPhoto"
                    app:layout_constraintEnd_toEndOf="@id/imgPhoto"
                    />

                <ImageView
                    android:id="@+id/imgPhoto"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/minDp"
                    app:layout_constraintDimensionRatio="h,4:3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:scaleType="centerCrop"
                    app:layout_constraintTop_toBottomOf="@id/titleImageSearch"
                    android:contentDescription="@string/image_item"/>

                <ImageButton
                    android:id="@+id/btnImg"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:src="@drawable/ic_image_search"
                    android:background="?attr/selectableItemBackground"
                    app:layout_constraintBottom_toBottomOf="@id/imgPhoto"
                    app:layout_constraintTop_toTopOf="@id/imgPhoto"
                    app:layout_constraintStart_toStartOf="@id/imgPhoto"
                    app:layout_constraintEnd_toEndOf="@id/imgPhoto"
                    android:contentDescription="@string/image_item" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:layout_margin="@dimen/defaultDp"
                    app:layout_constraintTop_toBottomOf="@id/imgPhoto"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:visibility="gone"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>